# mailSitter

./: Cargo.toml  README.md
src/: email.rs  lib.rs  main.rs  tests.rs  utils.rs
src/ddep/: api.rs  mod.rs
