[package]
name = "mail_sitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imap = "2.4.1"
native-tls = "0.2"
mailparse = "0.13.0"
clap = { version = "4.0.32", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.0"
dirs = "4.0.0"