[package]
name = "mail_sitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

default = ["ddep"]
gui = ["default", "klask"]

# duckduckgo email protection
ddep = ["reqwest", "tokio", "serde_json"]


[dependencies]
imap = "2.4.1"
native-tls = "0.2"
mailparse = "0.13.0"
clap = { version = "4.1.14", features = ["derive"] }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.0"
dirs = "4.0.0"
# duckduckgo email Protection
reqwest = { version = "0.11", features = ["json"], optional=true }
tokio = { version = "1", features = ["full"], optional=true }
serde_json = { version = "1.0.117", optional=true }
regex = { version = "1.10.4" }
# gui
klask = { version = "1.0.0", optional = true, git="https://github.com/xosxos/klask.git"}